{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 214,
  "lineage": "26c432e1-b332-4aa9-95a4-bd712f011c74",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ecs_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069b0ea3acaaa9d22",
            "association_id": "eipassoc-0110e1b5991a1ffc1",
            "domain": "vpc",
            "id": "eipalloc-069b0ea3acaaa9d22",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-0c4c1a3bbc68d9c48",
            "private_dns": "ip-10-0-1-20.ap-southeast-2.compute.internal",
            "private_ip": "10.0.1.20",
            "public_dns": "ec2-52-65-221-59.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.65.221.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hello_world_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:internet-gateway/igw-0774034d8a0747f8c",
            "id": "igw-0774034d8a0747f8c",
            "owner_id": "381492132929",
            "tags": {
              "Name": "hello-world-Ecs-gw"
            },
            "tags_all": {
              "Name": "hello-world-Ecs-gw"
            },
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:loadbalancer/app/ecslb/5992ef0a7da6bd4a",
            "arn_suffix": "app/ecslb/5992ef0a7da6bd4a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecslb-992956955.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:loadbalancer/app/ecslb/5992ef0a7da6bd4a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecslb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-039d5a03a6e85a992"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0091c8994289e4f22"
              },
              {
                "subnet_id": "subnet-0114c63012235b5d6"
              },
              {
                "subnet_id": "subnet-0307522b2cf0cb43e"
              }
            ],
            "subnets": [
              "subnet-0091c8994289e4f22",
              "subnet-0114c63012235b5d6",
              "subnet-0307522b2cf0cb43e"
            ],
            "vpc_id": "vpc-0aa56073cb2558b69",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.ecs_alb_sg",
            "aws_subnet.public",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:listener/app/ecslb/5992ef0a7da6bd4a/b1742d173a8f7539",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:targetgroup/AutoscaleTG/d93ee64ea6b3e539",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:listener/app/ecslb/5992ef0a7da6bd4a/b1742d173a8f7539",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:loadbalancer/app/ecslb/5992ef0a7da6bd4a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_lb",
            "aws_lb_target_group.autoscaleTG",
            "aws_security_group.ecs_alb_sg",
            "aws_subnet.public",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:targetgroup/AutoscaleTG/d93ee64ea6b3e539",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:listener-rule/app/ecslb/5992ef0a7da6bd4a/b1742d173a8f7539/ed0495551902d731",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/home/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:listener-rule/app/ecslb/5992ef0a7da6bd4a/b1742d173a8f7539/ed0495551902d731",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:listener/app/ecslb/5992ef0a7da6bd4a/b1742d173a8f7539",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_lb",
            "aws_lb_listener.front_end",
            "aws_lb_target_group.autoscaleTG",
            "aws_security_group.ecs_alb_sg",
            "aws_subnet.public",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "autoscaleTG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:targetgroup/AutoscaleTG/d93ee64ea6b3e539",
            "arn_suffix": "targetgroup/AutoscaleTG/d93ee64ea6b3e539",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:381492132929:targetgroup/AutoscaleTG/d93ee64ea6b3e539",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "AutoscaleTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ecs_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069b0ea3acaaa9d22",
            "association_id": "eipassoc-0110e1b5991a1ffc1",
            "connectivity_type": "public",
            "id": "nat-0b2c9437fd97a6b63",
            "network_interface_id": "eni-0c4c1a3bbc68d9c48",
            "private_ip": "10.0.1.20",
            "public_ip": "52.65.221.59",
            "subnet_id": "subnet-0307522b2cf0cb43e"
          },
          "dependencies": [
            "aws_eip.ecs_eip",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0411cae434cc820a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b2c9437fd97a6b63",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0411cae434cc820a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ecs_eip",
            "aws_nat_gateway.ecs_nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:route-table/rtb-0411cae434cc820a2",
            "id": "rtb-0411cae434cc820a2",
            "owner_id": "381492132929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b2c9437fd97a6b63",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:route-table/rtb-0a7a0645fa63ab006",
            "id": "rtb-0a7a0645fa63ab006",
            "owner_id": "381492132929",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0774034d8a0747f8c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub-routes"
            },
            "tags_all": {
              "Name": "pub-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hello_world_gw",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0641c65da83c9bbb7",
            "route_table_id": "rtb-0411cae434cc820a2",
            "subnet_id": "subnet-028c62869fbbf6753"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.hello_world"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003596b3f17d05c07",
            "route_table_id": "rtb-0411cae434cc820a2",
            "subnet_id": "subnet-09b752c58867e16d1"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.hello_world"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b028d0da8d6fb77",
            "route_table_id": "rtb-0411cae434cc820a2",
            "subnet_id": "subnet-0ab853525d9bf2d10"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f89fb1ba581c800e",
            "route_table_id": "rtb-0a7a0645fa63ab006",
            "subnet_id": "subnet-0307522b2cf0cb43e"
          },
          "dependencies": [
            "aws_internet_gateway.hello_world_gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.hello_world"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b6ea61e22c376f",
            "route_table_id": "rtb-0a7a0645fa63ab006",
            "subnet_id": "subnet-0091c8994289e4f22"
          },
          "dependencies": [
            "aws_internet_gateway.hello_world_gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.hello_world"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d749c5560537238",
            "route_table_id": "rtb-0a7a0645fa63ab006",
            "subnet_id": "subnet-0114c63012235b5d6"
          },
          "dependencies": [
            "aws_internet_gateway.hello_world_gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:security-group/sg-039d5a03a6e85a992",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-039d5a03a6e85a992",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs_alb_sg",
            "name_prefix": "",
            "owner_id": "381492132929",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:security-group/sg-0f9ad21fc13265ae5",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9ad21fc13265ae5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-039d5a03a6e85a992"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs_ec2_sg",
            "name_prefix": "",
            "owner_id": "381492132929",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_alb_sg",
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:subnet/subnet-028c62869fbbf6753",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028c62869fbbf6753",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492132929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:subnet/subnet-09b752c58867e16d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b752c58867e16d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492132929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:subnet/subnet-0ab853525d9bf2d10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab853525d9bf2d10",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492132929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-3"
            },
            "tags_all": {
              "Name": "private-3"
            },
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:subnet/subnet-0307522b2cf0cb43e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0307522b2cf0cb43e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492132929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:subnet/subnet-0091c8994289e4f22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0091c8994289e4f22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492132929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:subnet/subnet-0114c63012235b5d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0114c63012235b5d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492132929",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-3"
            },
            "tags_all": {
              "Name": "public-3"
            },
            "vpc_id": "vpc-0aa56073cb2558b69"
          },
          "dependencies": [
            "aws_vpc.hello_world"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:381492132929:vpc/vpc-0aa56073cb2558b69",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c75afb010cf78b7c",
            "default_route_table_id": "rtb-04765e0e5bec074fe",
            "default_security_group_id": "sg-01971f59e05b3bce6",
            "dhcp_options_id": "dopt-0e4be1bec1dc427bc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa56073cb2558b69",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04765e0e5bec074fe",
            "owner_id": "381492132929",
            "tags": {
              "Name": "hello-world-Ecs-Vpc"
            },
            "tags_all": {
              "Name": "hello-world-Ecs-Vpc"
            }
          }
        }
      ]
    }
  ]
}